# website-scanner

./: LICENSE  README.md  http_client.py  main.py  pyproject.toml  regex.py  requirements.txt  utils.py
data/: directories.txt  favicon-database.json  technologies.json
data/payloads/: command_injection.json
modules/: crawler.py  favicon.py  git.py  robots.py  subdomains.py  technology.py  wordpress.py
scripts/: databases.py  favicon.py
techs/: __init__.py  joomla.py  wordpress.py
vulns/: __init__.py  command_injection.py  lfi.py  sqli.py  ssti.py  xss.py
website_scanner/: __init__.py  main.py  regex.py  utils.py
website_scanner/data/: directories.txt  fill.json
website_scanner/data/payloads/: fuzz.json  lfi.json
website_scanner/info/: __init__.py  basic.py  cookies.py  crawler.py  directories.py  favicon.py  git.py  headers.py  methods.py  not_found_page.py  robots.py  subdomains.py  technology.py  tls.py
website_scanner/modules/: __init__.py  basic.py  cookies.py  crawler.py  directories.py  favicon.py  git.py  headers.py  methods.py  not_found_page.py  robots.py  subdomains.py  technology.py  tls.py
website_scanner/techs/: __init__.py  joomla.py  wordpress.py
website_scanner/vulns/: __init__.py  command_injection.py  fuzzer.py  lfi.py  sqli.py  ssti.py  xss.py
