[project]
name = "website-scanner"
version = "1.0"
description = "Scan a website"
authors = [
    { name = "nik1as" }
]
dependencies = [
    "aiohttp",
    "aiolimiter",
    "beautifulsoup4",
    "PyYAML"
]

[project.scripts]
website-scanner = "website_scanner.main:main"

[tool.setuptools]
packages = [
    "website_scanner",
    "website_scanner.info",
    "website_scanner.techs",
    "website_scanner.vulns"
]
include-package-data = true

[tool.setuptools.package-data]
website_scanner = ["data/**/*"]
